{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 210,
  "lineage": "cde3f67e-743e-d1d9-0817-86be67267d0c",
  "resources": [
    {
      "module": "module.compute_europe_west1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "grace_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251218",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/zones/europe-west1-b/disks/grace-europe-west1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "project": "grace-benchmark",
              "region": "europe-west1"
            },
            "enable_display": false,
            "id": "projects/project-71a4f829-43ea-436f-be1/zones/europe-west1-b/instances/grace-europe-west1",
            "instance_id": "4423471930305924722",
            "label_fingerprint": "5kJrA6HDEBM=",
            "labels": {
              "project": "grace-benchmark",
              "region": "europe-west1"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "pandey:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFWNjX7uUmyb7AQ/Q6v5c2moGIwRuoK/1uMFrV5c/BGw pandey@Ayushs-MacBook-Pro.local"
            },
            "metadata_fingerprint": "DBw02Nx1AY0=",
            "metadata_startup_script": "    #!/bin/bash\n    set -e\n    \n    # Function to wait for dpkg lock to be released\n    wait_for_dpkg_lock() {\n        echo \"Waiting for dpkg lock to be released...\"\n        while fuser /var/lib/dpkg/lock-frontend \u003e/dev/null 2\u003e\u00261; do\n            sleep 5\n        done\n        echo \"dpkg lock released\"\n    }\n    \n    # Wait for any existing dpkg processes to complete\n    wait_for_dpkg_lock\n    \n    # Update system\n    apt-ge [...]
            "name": "grace-europe-west1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.120.125",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
                "network_ip": "10.2.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/regions/europe-west1/subnetworks/grace-network-europe-west1",
                "subnetwork_project": "project-71a4f829-43ea-436f-be1"
              }
            ],
            "project": "project-71a4f829-43ea-436f-be1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/zones/europe-west1-b/instances/grace-europe-west1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "grace-benchmark"
            ],
            "tags_fingerprint": "RA6_HISpxWI=",
            "terraform_labels": {
              "project": "grace-benchmark",
              "region": "europe-west1"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network",
            "module.vpc.google_compute_subnetwork.europe_west1"
          ]
        }
      ]
    },
    {
      "module": "module.compute_us_east1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "grace_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251218",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/zones/us-east1-b/disks/grace-us-east1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "project": "grace-benchmark",
              "region": "us-east1"
            },
            "enable_display": false,
            "id": "projects/project-71a4f829-43ea-436f-be1/zones/us-east1-b/instances/grace-us-east1",
            "instance_id": "6594506516077465201",
            "label_fingerprint": "NX32-im9D2Q=",
            "labels": {
              "project": "grace-benchmark",
              "region": "us-east1"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "pandey:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFWNjX7uUmyb7AQ/Q6v5c2moGIwRuoK/1uMFrV5c/BGw pandey@Ayushs-MacBook-Pro.local"
            },
            "metadata_fingerprint": "DBw02Nx1AY0=",
            "metadata_startup_script": "    #!/bin/bash\n    set -e\n    \n    # Function to wait for dpkg lock to be released\n    wait_for_dpkg_lock() {\n        echo \"Waiting for dpkg lock to be released...\"\n        while fuser /var/lib/dpkg/lock-frontend \u003e/dev/null 2\u003e\u00261; do\n            sleep 5\n        done\n        echo \"dpkg lock released\"\n    }\n    \n    # Wait for any existing dpkg processes to complete\n    wait_for_dpkg_lock\n    \n    # Update system\n    apt-ge [...]
            "name": "grace-us-east1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.190.130.221",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/regions/us-east1/subnetworks/grace-network-us-east1",
                "subnetwork_project": "project-71a4f829-43ea-436f-be1"
              }
            ],
            "project": "project-71a4f829-43ea-436f-be1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/zones/us-east1-b/instances/grace-us-east1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "grace-benchmark"
            ],
            "tags_fingerprint": "RA6_HISpxWI=",
            "terraform_labels": {
              "project": "grace-benchmark",
              "region": "us-east1"
            },
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network",
            "module.vpc.google_compute_subnetwork.us_east1"
          ]
        }
      ]
    },
    {
      "module": "module.compute_us_west1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "grace_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251218",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/zones/us-west1-a/disks/grace-us-west1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "project": "grace-benchmark",
              "region": "us-west1"
            },
            "enable_display": false,
            "id": "projects/project-71a4f829-43ea-436f-be1/zones/us-west1-a/instances/grace-us-west1",
            "instance_id": "6571363114867740259",
            "label_fingerprint": "T4pyIZ3bAb8=",
            "labels": {
              "project": "grace-benchmark",
              "region": "us-west1"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "pandey:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFWNjX7uUmyb7AQ/Q6v5c2moGIwRuoK/1uMFrV5c/BGw pandey@Ayushs-MacBook-Pro.local"
            },
            "metadata_fingerprint": "DBw02Nx1AY0=",
            "metadata_startup_script": "    #!/bin/bash\n    set -e\n    \n    # Function to wait for dpkg lock to be released\n    wait_for_dpkg_lock() {\n        echo \"Waiting for dpkg lock to be released...\"\n        while fuser /var/lib/dpkg/lock-frontend \u003e/dev/null 2\u003e\u00261; do\n            sleep 5\n        done\n        echo \"dpkg lock released\"\n    }\n    \n    # Wait for any existing dpkg processes to complete\n    wait_for_dpkg_lock\n    \n    # Update system\n    apt-ge [...]
            "name": "grace-us-west1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.11.206.50",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
                "network_ip": "10.1.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/regions/us-west1/subnetworks/grace-network-us-west1",
                "subnetwork_project": "project-71a4f829-43ea-436f-be1"
              }
            ],
            "project": "project-71a4f829-43ea-436f-be1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/zones/us-west1-a/instances/grace-us-west1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "grace-benchmark"
            ],
            "tags_fingerprint": "RA6_HISpxWI=",
            "terraform_labels": {
              "project": "grace-benchmark",
              "region": "us-west1"
            },
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network",
            "module.vpc.google_compute_subnetwork.us_west1"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "7000",
                  "7001",
                  "7474",
                  "7687",
                  "8529",
                  "27017",
                  "9042"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-13T08:19:09.798-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-71a4f829-43ea-436f-be1/global/firewalls/grace-network-allow-app",
            "log_config": [],
            "name": "grace-network-allow-app",
            "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
            "priority": 1000,
            "project": "project-71a4f829-43ea-436f-be1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/firewalls/grace-network-allow-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "grace-benchmark"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-13T08:19:09.756-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-71a4f829-43ea-436f-be1/global/firewalls/grace-network-allow-internal",
            "log_config": [],
            "name": "grace-network-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
            "priority": 1000,
            "project": "project-71a4f829-43ea-436f-be1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/firewalls/grace-network-allow-internal",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "grace-benchmark"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "grace-benchmark"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-13T08:19:09.771-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-71a4f829-43ea-436f-be1/global/firewalls/grace-network-allow-ssh",
            "log_config": [],
            "name": "grace-network-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
            "priority": 1000,
            "project": "project-71a4f829-43ea-436f-be1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/firewalls/grace-network-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "grace-benchmark"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "grace_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
            "mtu": 0,
            "name": "grace-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6023007486088040072",
            "project": "project-71a4f829-43ea-436f-be1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "europe_west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-13T08:19:09.862-08:00",
            "gateway_address": "10.2.1.1",
            "id": "projects/project-71a4f829-43ea-436f-be1/regions/europe-west1/subnetworks/grace-network-europe-west1",
            "ip_cidr_range": "10.2.1.0/24",
            "name": "grace-network-europe-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-71a4f829-43ea-436f-be1",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/regions/europe-west1/subnetworks/grace-network-europe-west1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "us_east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-13T08:19:09.835-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/project-71a4f829-43ea-436f-be1/regions/us-east1/subnetworks/grace-network-us-east1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "grace-network-us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-71a4f829-43ea-436f-be1",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/regions/us-east1/subnetworks/grace-network-us-east1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "us_west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-13T08:19:10.937-08:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/project-71a4f829-43ea-436f-be1/regions/us-west1/subnetworks/grace-network-us-west1",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "grace-network-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/global/networks/grace-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-71a4f829-43ea-436f-be1",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-71a4f829-43ea-436f-be1/regions/us-west1/subnetworks/grace-network-us-west1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.grace_network"
          ]
        }
      ]
    }
  ]
}